fixed left/right spacing on restaurant pages using margin: auto. Adjusted some semantic h tags, still need to fix nav, header, etc. tags on main homepage for accessibility purposes. Back button is wonky. Hover effect for food containers is made but needs animating. Order button spacing and sizing fixed. Added darker shadows when hovering over buttons.

--- a/css/style.css
+++ b/css/style.css
@@ -370,12 +370,12 @@ body {
 .title {
   font-family: Shrikhand, Arial;
   margin: 0px 0px 10px 0px;
+  max-width: 400px;
 }
 
 /* <!----------------------------Page Start----------------------------> */
 .header {
   display: flex;
-  width: 100%;
   justify-content: center;
 }
 
@@ -433,6 +433,7 @@ body {
 }
 .nav .nav__explore-restaurants .nav__explore-button:hover {
   background: linear-gradient(0deg, #a16be0 0%, #ff93e1 100%);
+  box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.3);
 }
 
 /* <!----------------------------Page Center---------------------------> */
@@ -458,7 +459,7 @@ body {
   margin: 20px 20px 20px 20px;
   font-weight: 600;
   box-shadow: 4px 4px 8px 0px rgba(0, 0, 0, 0.1);
-  transition: 0.5s;
+  transition: 0.55;
 }
 .instructions__cards .instructions__numbered {
   font-weight: 400;
@@ -561,6 +562,10 @@ body {
 .restaurants__card .favorite-icon:hover .full-heart {
   opacity: 1;
 }
+.restaurants__card .favorite-icon:hover .empty-heart {
+  opacity: 0;
+  transition: 0.35s;
+}
 .restaurants__card .favorite-icon .empty-heart,
 .restaurants__card .favorite-icon .full-heart {
   position: absolute;
@@ -607,11 +612,7 @@ body {
 .back-arrow {
   font-size: 25px;
   color: #000000;
-  align-self: center;
-  margin-bottom: 10px;
-  padding-bottom: 5px;
-  position: absolute;
-  left: 5%;
+  align-self: left;
 }
 .back-arrow:hover {
   color: #9356DC;
@@ -620,18 +621,19 @@ body {
 .restaurant-page-image {
   width: 100%;
   height: auto;
+  max-height: 350px;
   object-fit: cover;
-  margin-bottom: -20px;
+  margin-bottom: -0.1%;
 }
 
 .meal-selection {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  max-width: 967px;
+  max-width: 1060px;
   position: relative;
   top: -50px;
-  margin-bottom: -50px;
+  margin: 0px auto -50px;
   padding: 50px 30px;
   background-color: #f5f5f5;
   border-radius: 50px 50px 0px 0px;
@@ -639,16 +641,28 @@ body {
 .meal-selection .meal-selection__header {
   font-size: 20px;
   display: flex;
-  width: 100%;
+  flex-wrap: wrap;
   justify-content: space-between;
+  width: 100%;
+  margin: 0px auto;
+  max-width: 500px;
+}
+.meal-selection .meal-selection__header h1 {
+  font-size: 25px;
+  margin-bottom: 0px;
+  min-width: 210px;
 }
 
 .restaurant-page-favorite-icon {
   position: relative;
-  right: 60px;
+  width: 30px;
 }
 .restaurant-page-favorite-icon:hover .full-heart {
   opacity: 1;
+}
+.restaurant-page-favorite-icon:hover .empty-heart {
+  opacity: 0;
+  transition: 0.35s;
 }
 .restaurant-page-favorite-icon .empty-heart,
 .restaurant-page-favorite-icon .full-heart {
@@ -665,37 +679,76 @@ body {
 }
 
 .meal-course-text {
-  margin: 30px 0px 0px;
+  font-weight: 400;
+  font-size: 18px;
+  margin: 30px auto 0px;
+  width: 100%;
+  max-width: 730px;
 }
 
 .underline {
-  width: 40px;
+  width: 45px;
   height: 3px;
-  margin-top: 5px;
+  margin: 5px auto 0px 0px;
   background-color: #99E2D0;
 }
 
-.food-options {
+.food-option {
   background-color: #fff;
-  max-width: 768px;
+  height: 70px;
+  width: 100%;
+  max-width: 730px;
   border-radius: 15px;
+  margin: 10px auto;
+  box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.15);
+  overflow: hidden;
+}
+.food-option .content {
   display: flex;
   flex-wrap: wrap;
+  height: 70px;
   justify-content: space-between;
   padding: 15px 13px;
-  margin: 10px 0px;
-  box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.15);
+  width: calc(100% + 70px);
 }
-.food-options h3 {
-  width: 100%;
-  margin: 0px 0px 5px;
+.food-option .content:hover {
+  width: calc(100% + 0px);
 }
-.food-options p {
+.food-option .content h3 {
+  margin: 0px auto 5px auto;
+}
+.food-option .content p {
   margin: 0px;
 }
-.food-options .food-options__cost {
+.food-option .content .food-option__cost {
   font-weight: 600;
-  margin-right: 10px;
+  margin-left: auto;
+  align-self: flex-end;
+}
+.food-option .content .checkmark {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #99E2D0;
+  margin: -15px 0px;
+  width: 70px;
+  height: 70px;
+  position: relative;
+  right: -14px;
+  border-radius: 0px 14px 14px 0px;
+}
+.food-option .content .checkmark i {
+  color: #99E2D0;
+  background: #fff;
+  border-radius: 20px;
+  width: 15px;
+  height: 15px;
+  padding: 11px;
+}
+.food-option .content .checkmark i::before {
+  position: relative;
+  top: -7px;
+  right: 6.5px;
 }
 
 .order-button {
@@ -704,13 +757,15 @@ body {
   box-shadow: 0px 6px 7px 0px rgba(0, 0, 0, 0.227);
   border-radius: 35px;
   padding: 20px 0px;
-  width: 50%;
-  margin: 50px 25% 10px;
+  width: 60%;
+  max-width: 230px;
+  margin: 50px auto 10px;
   border: none;
   cursor: pointer;
 }
 .order-button:hover {
   background: linear-gradient(0deg, #a16be0 0%, #ff93e1 100%);
+  box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, 0.3);
 }
 
 /* <!----------------------------------------------------------------> */
